--- a/20. 실시간 검색어모아보기/main20.ipynb
+++ b/20. 실시간 검색어모아보기/main20.ipynb
@@ -16,13 +16,17 @@
    ],
    "source": [
     "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "#구글 크롬 드라이버의 자동설치를 위한 라이브러리를 불러온다.\n",
     "from selenium import webdriver\n",
+    "#크롬드라이버의 제어를 위한 selenium라이브러리를 불러온다.\n",
     "\n",
     "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "#크롬드라이버를 실행시킨다, 없으면 설치를 한다\n",
     "\n",
     "URL='https://www.google.co.kr'\n",
     "driver.get(url=URL)\n",
-    "driver.implicitly_wait(time_to_wait=10)"
+    "driver.implicitly_wait(time_to_wait=10)\n",
+    "#구글 사이트로 이동한다 이동까지 10초간 기다린다."
    ]
   },
   {
@@ -53,13 +57,16 @@
     "URL='https://signal.bz/news'\n",
     "driver.get(url=URL)\n",
     "driver.implicitly_wait(time_to_wait=10) \n",
+    "# https://signal.bz/news 사이트로 이동한다.\n",
     "\n",
     "naver_results = driver.find_elements(By.CSS_SELECTOR, '#app > div > main > div > section > div > section > section:nth-child(2) > div:nth-child(2) > div > div > div > a > span.rank-text')\n",
+    "#실시간 검색어 원소들을 찾는다\n",
     "\n",
     "naver_list = []\n",
     "for naver_result in naver_results:\n",
     "    print(naver_result.text)\n",
-    "    naver_list.append(naver_result.text)"
+    "    naver_list.append(naver_result.text)\n",
+    "#찾은 검색어 원소들을 출력하고 naver_list 리스트에 하나씩 추가한다.\n"
    ]
   },
   {
@@ -88,15 +95,19 @@
     "URL='https://www.nate.com'\n",
     "driver.get(url=URL)\n",
     "driver.implicitly_wait(time_to_wait=10)\n",
+    "# 네이트 사이트로 이동\n",
     "\n",
     "driver.find_element(By.CSS_SELECTOR,'#olLiveIssueKeyword > li:nth-child(1) > a > span.txt_rank').click()\n",
+    "# 실시간 검색어 원소 1위를 찾아서 클릭한다.\n",
     "\n",
     "nate_results = driver.find_elements(By.CSS_SELECTOR,'#search-option > form:nth-child(1) > fieldset > div.issue-kwd > span > a')\n",
+    "# 실시간 이슈키워드를 가져온다.\n",
     "\n",
     "nate_list = []\n",
     "for nate_result in nate_results:\n",
     "    print(nate_result.text)\n",
-    "    nate_list.append(nate_result.text)"
+    "    nate_list.append(nate_result.text)\n",
+    "# 위와 마찬가지로 출력후 빈 리스트에 추가."
    ]
   },
   {
@@ -127,14 +138,18 @@
     "URL='https://zum.com'\n",
     "driver.get(url=URL)\n",
     "driver.implicitly_wait(time_to_wait=10) \n",
+    "# 줌 사이트로 이동\n",
     "\n",
     "driver.find_element(By.CSS_SELECTOR,'#app > div > header > div.search_bar > div > fieldset > div > input[type=text]').send_keys(\"아무거나 검색\")\n",
     "time.sleep(0.5)\n",
+    "#검색창에 '아무거나 검색' 입력\n",
     "\n",
     "driver.find_element(By.CSS_SELECTOR,'#app > div > header > div.search_bar > div > fieldset > div > button.search').click()\n",
     "time.sleep(1)\n",
+    "#검색창의 돋보기를 찾아서 클릭\n",
     "\n",
     "zoom_results = driver.find_elements(By.CSS_SELECTOR,'#issue_wrap > ul > li > div > a:nth-child(1) > span.txt')\n",
+    "#실시간 검색내용 찾기\n",
     "\n",
     "zoom_list = []\n",
     "for zoom_result in zoom_results:\n",
@@ -160,7 +175,8 @@
    "source": [
     "print(\"네이버\",naver_list)\n",
     "print(\"네이트\",nate_list)\n",
-    "print(\"줌\",zoom_list)"
+    "print(\"줌\",zoom_list)\n",
+    "#위에 만들었던 3개 각각의 리스트를 출력"
    ]
   }
  ],
@@ -180,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
