--- a/21. 핫딜 알리미/main21-1.ipynb
+++ b/21. 핫딜 알리미/main21-1.ipynb
@@ -9,7 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_4356\\1979250293.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "[WDM] - Downloading: 100%|██████████| 6.79M/6.79M [00:00<00:00, 12.3MB/s]\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_7824\\1979250293.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -34,34 +35,25 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'webdriver' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12800\\3276602026.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mby\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mChromeDriverManager\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minstall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[하우스앱] 삼성전자 그랑데AI 드럼세탁기 WF24T8500KV (944,000원/무배)\n",
+      "https://www.ppomppu.co.kr/zboard/view.php?id=ppomppu&page=1&divpage=76&no=451839\n"
      ]
     }
    ],
    "source": [
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "# 크롬 드라이버 자동설치 라이브러리\n",
-    "from selenium import webdriver\n",
-    "# 드라이버 제어하는 라이브러리 \n",
     "from selenium.webdriver.common.by import By\n",
     "\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "\n",
-    "\n",
+    "# 게시글 제목과 링크를 찾아온다\n",
     "titles = driver.find_elements(By.CSS_SELECTOR,'#revolution_main_table > tbody > tr:nth-child(15) > td:nth-child(3) > table > tbody > tr > td:nth-child(2) > div > a > font')\n",
     "urls = driver.find_elements(By.CSS_SELECTOR,'#revolution_main_table > tbody > tr:nth-child(15) > td:nth-child(3) > table > tbody > tr > td:nth-child(2) > div > a')\n",
     "\n",
+    "#제목과 링크를 출력한다\n",
     "for i in range(len(titles)):\n",
     "    print(titles[i].text)\n",
-    "    print(urls[i].get_attribute('href'))\n",
-    "\t"
+    "    print(urls[i].get_attribute('href'))\n"
    ]
   },
   {
@@ -69,7 +61,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import telegram\n",
+    "message=\"\"\n",
+    "for i in range(len(titles)):\n",
+    "    if \"세탁기\" in titles[i].text:\n",
+    "        message = titles[i].text + \"\\n\"+urls[i].get_attribute('href')\n",
+    "        print(message)\n",
+    "        token = '5863921919:AAEu0y9RotBmdf-klgmkZJ3OJk6OnGgit7o'\n",
+    "        id = \"5920401541\"\n",
+    "        bot = telegram.Bot(token)\n",
+    "        bot.sendMessage(chat_id=id, text=message)"
+   ]
   }
  ],
  "metadata": {
